[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/title.gd" type="Script" id=1]
[ext_resource path="res://assets/audio/title_music.wav" type="AudioStream" id=2]
[ext_resource path="res://assets/graphics/Break-Dungeon.png" type="Texture" id=3]
[ext_resource path="res://assets/graphics/backdrop.png" type="Texture" id=4]

[node name="title" type="Node" index="0"]

script = ExtResource( 1 )

[node name="music" type="AudioStreamPlayer" parent="." index="0"]

stream = ExtResource( 2 )
volume_db = -10.0
pitch_scale = 1.0
autoplay = true
mix_target = 0
bus = "Master"

[node name="Break-Dungeon" type="Sprite" parent="." index="1"]

position = Vector2( 64, 48 )
texture = ExtResource( 3 )
centered = false
_sections_unfolded = [ "Transform" ]

[node name="debug" type="Button" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 176.0
margin_top = 120.0
margin_right = 269.0
margin_bottom = 140.0
rect_scale = Vector2( 1.5, 1.5 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Debug Mode"
flat = false
align = 1
_sections_unfolded = [ "Rect" ]

[node name="marathon" type="Button" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 176.0
margin_top = 184.0
margin_right = 269.0
margin_bottom = 204.0
rect_scale = Vector2( 1.5, 1.5 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Marathon"
flat = false
align = 1
_sections_unfolded = [ "Rect" ]

[node name="options" type="Button" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 176.0
margin_top = 248.0
margin_right = 269.0
margin_bottom = 268.0
rect_scale = Vector2( 1.5, 1.5 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Options"
flat = false
align = 1
_sections_unfolded = [ "Rect" ]

[node name="Sprite" type="Sprite" parent="." index="5"]

z_index = -15
texture = ExtResource( 4 )
centered = false
_sections_unfolded = [ "Z Index" ]

[connection signal="pressed" from="debug" to="." method="_on_debug_pressed"]

[connection signal="pressed" from="marathon" to="." method="_on_marathon_pressed"]

[connection signal="pressed" from="options" to="." method="_on_options_pressed"]


